Fixed URLs breaking responsiveness by not wrapping

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -6,6 +6,7 @@
 .blog-contents p{
     font-size: 1.2rem;
     font-weight: 400;
+    margin-bottom: 2rem;
 }
 
 .blog-figure{
