--- a/src/styles/title.css
+++ b/src/styles/title.css
@@ -52,7 +52,7 @@
     .title-main{
         font-size: 4rem;
 
-        line-height: 6rem;
+        line-height: 5rem;
     }
     
     .title-second{
@@ -82,7 +82,7 @@
     .title-main{
         font-size: 2.5rem;
 
-        line-height: 4.5rem;
+        line-height: 3.5rem;
     }
     
     .title-second{
